--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ cbse, cbse admit card id finder, cbse admit card id, admit card id generator, cb
 
 <h1 class="title">Pharmeasy App Download - Pharmeasy apk</h1>
 <div class="logo">
-    <img src="https://play-lh.googleusercontent.com/94w8YgbYtWqoaZsg1ROsnEhNlAOaEL376bIoiN36jNN4UKnF2hchJdaLSksKP_38bMs=s180-rw" alt="app logo" title="Pharmeasy App Download - Pharmeasy apk" />
+    <img src="https://play-lh.googleusercontent.com/94w8YgbYtWqoaZsg1ROsnEhNlAOaEL376bIoiN36jNN4UKnF2hchJdaLSksKP_38bMs=s180-rw" height="180px" width="180px" alt="app logo" title="Pharmeasy App Download - Pharmeasy apk" />
 </div>
 <div class="download">
 <a href="#" title="Pharmeasy App Download - Pharmeasy apk" class="download-btn">Download Now</a>
