--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <meta
         content="Pharmeasy app - Download Pharmeasy app for free get all mediciens delivery to your home with Pharmeasy apk. Get lowest price medicines"
         name="description" />
-    <meta content="How to find cbse admit card id, how to check cbse result without admit card number,
-cbse, cbse admit card id finder, cbse admit card id, admit card id generator, cbse admit card" name="keywords" />
+    <meta content="pharmeasy, pharmeasy app, pharmeasy apk, pharmeasy apk download, pharmeasy download 2021, pharmeasy app 2021," name="keywords" />
     <meta name="author" content="Zuck">
     <title>Pharmeasy App Download - Pharmeasy apk</title>
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
@@ -98,6 +97,7 @@ VidMate app must to be used for personal purpose only in accordance to the gover
     <p>
         So what’s the price for all these super awesome features? Absolutely nothing! It was developed as a free portal, and always will stick to it’s core : )
     </p>
+    <p>pharmeasy pharmeasy app pharmeasy apk download pharmeasy apk 2021 pharmeasy app download pharmeasy app 2021</p>
 
 </div>
 </body>
